fix filter icon placement on firefox and safari

--- a/css/aha-table.css
+++ b/css/aha-table.css
@@ -1926,3 +1926,7 @@ label {
 
 .th {
   font-weight: bold; }
+
+.filter-cell-fix {
+  overflow: auto;
+}
